# emocapnet-mobile

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml  kaggle.yaml  smoke.yaml
scripts/: setup_cpu.sh
src/emocapnet/: __init__.py  cli.py  config.py  constants.py  losses.py  tokenization.py  utils.py
src/emocapnet/compression/: __init__.py  quantize.py
src/emocapnet/data/: __init__.py  datamodule.py  dataset.py  synthetic.py
src/emocapnet/evaluation/: __init__.py  controllability.py  evaluator.py  latency.py  metrics.py
src/emocapnet/export/: __init__.py  onnx_export.py
src/emocapnet/models/: __init__.py  encoders.py  student.py  teacher.py
src/emocapnet/serving/: __init__.py  app.py  schemas.py
src/emocapnet/training/: __init__.py  checkpoint.py  schedule.py  trainer.py
tests/: conftest.py  test_config.py  test_data.py  test_end_to_end.py  test_losses.py  test_metrics.py  test_models.py  test_onnx.py  test_quantize.py  test_serving.py  test_tokenization.py
